syntax = "proto3";

package phi;
option go_package = "github.com/clstb/phi/proto";
import "google/protobuf/empty.proto";


message ProvisionTinkUserResponse {
  string ExternalUserId = 1;
  string TinkId = 2;
}

message TinkIdMessage {
  string TinkId = 1;
}

message TinkLinkMessage {
  string TinkLink = 1;
}



service TinkGWService {

  rpc ProvisionTinkUser (google.protobuf.Empty) returns (ProvisionTinkUserResponse);
  rpc ProvisionMockTinkUser (google.protobuf.Empty) returns (ProvisionTinkUserResponse);
  rpc CreateTinkLink (TinkIdMessage) returns (TinkLinkMessage);

}
